[tool.poetry]
name = "leetcodesnippets"
version = "0.1.0"
description = ""
authors = ["Julien Gaye <julien.gaye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
